--- a/public/styles.css
+++ b/public/styles.css
@@ -80,7 +80,10 @@ body {
 .box {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    width: 50%;
+    margin: auto;
+    align-items: center;
 }
 
 #canvas {
@@ -101,4 +104,42 @@ body {
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     cursor: pointer;
+}
+
+.toolbox {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.color-palette {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+}
+
+.color-palette .color {
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 2px;
+    box-sizing: border-box;
+}
+
+.color-palette .color.selected {
+    border: 2px solid #333;
+}
+
+#lineWidth {
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
+    padding: 2px;
+    text-align: center;
+    font-size: 2em;
 }
